@@ -9,8 +9,9 @@ use base 'Syntax::Keyword::Junction::Base';
 
 BEGIN {
   if ($] >= 5.010001) {
-    eval q<
+    eval q|
 sub match {
+    no if $] > 5.017010, warnings => 'experimental::smartmatch';
     my ( $self, $other, $is_rhs ) = @_;
 
     if ($is_rhs) {
@@ -27,7 +28,7 @@ sub match {
 
     return;
 }
->
+|
   }
 }
 
