@@ -9,8 +9,9 @@ use base 'Syntax::Keyword::Junction::Base';
 
 BEGIN {
   if ($] >= 5.010001) {
-    eval q<
+    eval q|
 sub match {
+    no if $] > 5.017010, warnings => 'experimental::smartmatch';
     my ( $self, $other, $is_rhs ) = @_;
 
     my $count = 0;
@@ -36,7 +37,7 @@ sub match {
 
     return($count == 1);
 }
->
+|
   }
 }
 
